--- a/registration-processor/pre-processor/registration-processor-external-stage/Dockerfile
+++ b/registration-processor/pre-processor/registration-processor-external-stage/Dockerfile
@@ -12,6 +12,12 @@ ARG active_profile
 # can be passed during Docker build as build time environment for config server URL
 ARG spring_config_url
 
+# can be passed during Docker build as build time environment for glowroot 
+ARG is_glowroot
+
+# can be passed during Docker build as build time environment for artifactory URL
+ARG artifactory_url
+
 # environment variable to pass active profile such as DEV, QA etc at docker runtime
 ENV active_profile_env=${active_profile}
 
@@ -21,13 +27,19 @@ ENV spring_config_label_env=${spring_config_label}
 # environment variable to pass github branch to pickup configuration from, at docker runtime
 ENV spring_config_label_env=${spring_config_label}
 
+# environment variable to pass glowroot, at docker runtime
+ENV is_glowroot_env=${is_glowroot}
+
+# environment variable to pass artifactory url, at docker runtime
+ENV artifactory_url_env=${artifactory_url}
+
 # change volume to whichever storage directory you want to use for this container.
 VOLUME /home/logs
 
 COPY ./target/registration-processor-external-stage-*.jar registration-processor-external-stage.jar
 
-CMD if [ "$active_profile_env" = "preprod" ]; then \
-    wget 'http://13.71.87.138:8040/artifactory/libs-release-local/io/mosip/testing/glowroot.zip' ; \
+CMD if [ "$is_glowroot_env" = "present" ]; then \
+    wget "${artifactory_url_env}"/artifactory/libs-release-local/io/mosip/testing/glowroot.zip ; \
     apt-get update && apt-get install -y unzip ; \
     unzip glowroot.zip ; \
     rm -rf glowroot.zip ; \
