--- a/id-repository/id-repository-core/pom.xml
+++ b/id-repository/id-repository-core/pom.xml
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-auth-adapter</artifactId>
-			<version>${project.version}</version>
+			<version>0.9.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
