--- a/id-repository/id-repository-identity-service/Dockerfile
+++ b/id-repository/id-repository-identity-service/Dockerfile
@@ -49,6 +49,7 @@ CMD if [ "$is_glowroot_env" = "present" ]; then \
     sed -i 's/<service_name>/id-repository-identity-service/g' glowroot/glowroot.properties ; \
     java -Dloader.path=/kernel-ref-idobjectvalidator-0.9.1.jar -jar -javaagent:glowroot/glowroot.jar -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}"  -Dspring.cloud.config.uri="${spring_config_url_env}" id-repository-identity-service.jar ; \
     else \
+    wget "${artifactory_url_env}"/artifactory/libs-release-local/io/mosip/kernel/kernel-ref-idobjectvalidator/0.9.1/kernel-ref-idobjectvalidator-0.9.1.jar kernel-ref-idobjectvalidator-0.9.1.jar ; \
     java -Dloader.path=/kernel-ref-idobjectvalidator-0.9.1.jar -jar -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}"  -Dspring.cloud.config.uri="${spring_config_url_env}" id-repository-identity-service.jar ; \
     fi
 
