--- a/kernel/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/kernel/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -34,6 +34,6 @@ mosip.all-languages=all
 #auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
 mosip.supported-languages=eng,ara,fra
 
-auth.server.validate.url=https://qa.mosip.io/v1/authmanager/authorize/admin/validateToken
+auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/admin/validateToken
 
 
