--- a/kernel/kernel-pdfgenerator-itext/pom.xml
+++ b/kernel/kernel-pdfgenerator-itext/pom.xml
@@ -42,5 +42,10 @@
 			<artifactId>bcprov-jdk15on</artifactId>
 			<version>${bouncycastle.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpkix-jdk15on</artifactId>
+			<version>${bouncycastle.version}</version>
+		</dependency>
 	</dependencies>
 </project>
