--- a/kernel/kernel-keymanager-service/src/test/resources/application.properties
+++ b/kernel/kernel-keymanager-service/src/test/resources/application.properties
@@ -28,8 +28,7 @@ mosip.kernel.crypto.hash-iteration=100000
 
 mosip.kernel.data-key-splitter=#KEY_SPLITTER#
 
-# DB Properties For Testing
---------------------------------------
+
 javax.persistence.jdbc.driver=org.h2.Driver
 javax.persistence.jdbc.url=jdbc:h2\:mem\:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS kernel
 javax.persistence.jdbc.user=sa
@@ -49,3 +48,5 @@ hibernate.generate_statistics=false
 mosip.kernel.keymanager.certificate-file-path=classpath:cert/mosipio.crt
 mosip.kernel.keymanager.privatekey-file-path=classpath:cert/mosipio.key
 mosip.kernel.keymanager.certificate-type=X509
+
+mosip.kernel.pdf_owner_password=PDFADMIN
