--- a/kernel/kernel-crypto-signature/src/test/resources/application.properties
+++ b/kernel/kernel-crypto-signature/src/test/resources/application.properties
@@ -35,3 +35,4 @@ mosip.signed.response.header=response-signature
 mosip.kernel.keymanager-service-sign-url=https://dev.mosip.io/v1/cryptomanager/private/encrypt
 mosip.kernel.keymanager-service-publickey-url=https://dev.mosip.io/v1/keymanager/publickey/{applicationId}
 auth.server.validate.url=http://localhost:8091/v1.0/authorize/validateToken
+auth.server.admin.validate.url=http://localhost:8091/v1/authmanager/authorize/admin/validateToken
