--- a/kernel/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/kernel/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -35,5 +35,6 @@ mosip.all-languages=all
 mosip.supported-languages=eng,ara,fra
 
 auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/admin/validateToken
+auth.server.admin.validate.url=https://dev.mosip.io/v1/authmanager/authorize/admin/validateToken
 
 
