--- a/id-repository/id-repository-identity-service/src/main/resources/bootstrap.properties
+++ b/id-repository/id-repository-identity-service/src/main/resources/bootstrap.properties
@@ -1,8 +1,8 @@
-spring.cloud.config.uri=http://104.211.212.28:51000/
-spring.cloud.config.label=fix-29369-idrepo_perf
+spring.cloud.config.uri=localhost
+spring.cloud.config.label=0.12.0
 spring.cloud.config.name=id-repository
 spring.application.name=id-repository
-spring.profiles.active=preprod
+spring.profiles.active=dev
 
 #management.security.enabled=false
 #management.endpoint.health.show-details=when-authorized
