--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -264,3 +264,4 @@ mosip.kernel.zone-validation-url=http://localhost:8086/v1/masterdata/zones/autho
 mosip.kernel.registrationcenterid.length=5
 
 mosip.kernel.audit.manager.api=https://dev.mosip.io/v1/auditmanager/audits
+mosip.kernel.masterdata.audit-url=https://dev.mosip.io/v1/auditmanager/audits
