--- a/admin/admin-service/src/main/resources/application-local.properties
+++ b/admin/admin-service/src/main/resources/application-local.properties
@@ -196,6 +196,7 @@ mosip.kernel.audit.manager.api=https://dev.mosip.io/v1/auditmanager/audits
 
 auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
 auth.server.admin.validate.url=https://dev.mosip.io/v1/authmanager/authorize/admin/validateToken
+mosip.kernel.masterdata.audit-url=https://dev.mosip.io/v1/auditmanager/audits
 
 
 
