--- a/kernel/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/kernel/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -40,3 +40,5 @@ auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/admin/val
 auth.server.admin.validate.url=https://dev.mosip.io/v1/authmanager/authorize/admin/validateToken
 
 master.search.maximum.rows=50
+
+mosip.kernel.masterdata.audit-url=https://dev.mosip.io/v1/auditmanager/audits
